# lwutil

./: .gitignore  AUTHORS  CHANGELOG.md  CMakeLists.txt  README.md  library.json  lwutil.c  lwutil.h
dev/: lwutil_dev.sln  lwutil_dev.vcxproj  lwutil_dev.vcxproj.filters  main.c
dev/VisualStudio/: lwutil_dev.sln  lwutil_dev.vcxproj  lwutil_dev.vcxproj.filters  main.c
docs/: conf.py  doxyfile.doxy  index.rst
docs/api-reference/: lwutil.rst
docs/get-started/: index.rst
docs/user-manual/: index.rst
lwutil/: CMakeLists.txt  library.cmake
lwutil/src/include/lwutil/: lwutil.h
lwutil/src/lwutil/: lwutil.c
